px4_ws/logs/px4_offboard/build.make.073.log.stderr
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/Mission.cpp:318:69: error: no 'void Mission::velCallabck(geometry_msgs::TwistStamped)' member function declared in class 'Mission'
 void Mission::velCallabck(const geometry_msgs::TwistStamped vel_read)
                                                                     ^
make[2]: *** [CMakeFiles/mission.dir/src/Mission.cpp.o] Error 1
make[1]: *** [CMakeFiles/mission.dir/all] Error 2
make: *** [all] Error 2
